# raytracing-in-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-test.yml  code-quality.yml  lint.yml  test.yml
src/: camera.rs  color.rs  image.rs  main.rs  parallel.rs  random.rs  ray.rs  vec3.rs
src/hittable/: hittable_list.rs  mod.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
