[package]
name = "raytracing_in_rust"
version = "0.1.0"
authors = ["Luca Corrieri"]
edition = "2021"

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["bmp"] }
num_cpus = "1.13.0"
pbr = "1.0.4"
rand = "0.8.4"
structopt = { version = "0.3.25", default-features = false }
